<resources>
    <string name="app_name">KsmartUI</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="khachhanghaicham">Khách hàng:</string>
    <string name="khachhang">Khách hàng</string>
    <string name="khachhanggoiy">Khách hàng gợi ý</string>
    <string name="thoigianhaicham">Thời gian:</string>
    <string name="danhmuchaicham">Danh mục:</string>
    <string name="diadiemkhachhanghaicham">Địa điểm khách hàng:</string>
    <string name="vitri">Vị trí</string>
    <string name="diadiemchup">Địa điểm chụp:</string>
    <string name="ghichuhaicham">Ghi chú:</string>
    <string name="hinhanh">Hình ảnh:</string>
    <string name="cuahang">Cửa hàng</string>
    <string name="noidung">Nội dung</string>
    <string name="noidunghaicham">Nội dung:</string>
    <string name="ketqua">Kết quả</string>
    <string name="nhacnhohaicham">Nhắc nhỡ:</string>
    <string name="ketquahaicham">Kết quả:</string>
    <string name="luu">Lưu</string>
    <string name="ketthuc">Kết thúc</string>
    <string name="gui">Gửi</string>
    <string name="donhang">Đơn hàng</string>
    <string name="khuyenmaihaicham">Khuyến mại:</string>
    <string name="khongapdunghaicham">Không áp dụng:</string>
    <string name="mathanghaicham">Mặt hàng:</string>
    <string name="mathang">Măt hàng</string>
    <string name="dongiahaicham">Đơn giá:</string>
    <string name="soluonghaicham">Số lượng:</string>
    <string name="tatca">Tất cả</string>
    <string name="giahaicham">Giá:</string>
    <string name="hinhthuchaicham">Hình thức:</string>
    <string name="buon">Buôn</string>
    <string name="le">Lẻ</string>
    <string name="khac">Khác</string>
    <string name="kho">Kho:</string>
    <string name="tonkho">Tồn kho:</string>
    <string name="dathang">Đặt hàng</string>
    <string name="xacnhan">Xác nhận</string>
    <string name="giaohang">Giao hàng</string>
    <string name="thanhtoan">Thanh toán</string>
    <string name="dangxuly">Đang xử lý</string>
    <string name="hoantattrongngay">Hoàn tất trong ngày</string>
    <string name="ghichu">Ghi chú</string>
    <string name="tongtiendonhang">Tổng tiền đơn hàng:</string>
    <string name="sotiendathanhtoan">Số tiền đã thanh toán:</string>
    <string name="sotienphaithanhtoan">Số tiền phải thanh toán:</string>
    <string name="sotienthanhtoanhaicham">Số tiền thanh toán:</string>
    <string name="thanhtoantoanbo">Thanh toán toàn bộ</string>
    <string name="xemlichsu">Xem lịch sử</string>
    <string name="lichsuthanhtoan">Lịch sử thanh toán</string>
    <string name="mahanghaicham">Mã hàng:</string>
    <string name="donvihaicham">Đơn vị:</string>
    <string name="nhacungcaphaicham">Nhà cung cấp:</string>
    <string name="nhanhieuhaicham">Nhãn hiệu:</string>
    <string name="linkhaicham">Link:</string>
    <string name="motahaicham">Mô tả;</string>
    <string name="tieudehaicham">Tiêu đề:</string>
    <string name="taophanhoi">Tạo phản hồi</string>
    <string name="taoghichu">Tạo ghi chú</string>
    <string name="datrahaicham">Đã trả:</string>
    <string name="connohaicham">Còn nợ:</string>
    <string name="thuhoicongno">Thu hồi công nợ</string>
    <string name="sodienthoailienhehaicham">Số điện thoại liên hệ:</string>
    <string name="diachikhachhanghaicham">Địa chỉ khách hàng:</string>
    <string name="sotiencongnohaicham">Số tiền công nợ:</string>
    <string name="khuyenmai">Khuyến mại</string>
    <string name="thoihanhaicham">Thời hạn:</string>
    <string name="chitietkhuyenmai">Chi tiết khuyến mại</string>
    <string name="yeucautongtienhaicham">Yêu cầu tổng tiền:</string>
    <string name="chieykhautienhaicham">Chiết khấu tiền:</string>
    <string name="chietkhauphantramhaicham">Chiết khấu %:</string>
    <string name="danhsachmathangtang">Danh sách mặt hàng tặng</string>
    <string name="nhomhicham">Nhóm:</string>
    <string name="sdthaicham">Sđt:</string>
    <string name="diachihaicham">Địa chỉ:</string>
    <string name="emailhaicham">Email:</string>
    <string name="thongtinkhachhang">Thông tin khách hàng</string>
    <string name="nhaptenkhachhang">Nhập tên khách hàng</string>
    <string name="tungayhaicham">Từ ngày:</string>
    <string name="denngayhaicham">Đến ngày:</string>
    <string name="nhapghichu">Nhập ghi chú:</string>
    <string name="capnhat">Cập nhật</string>
    <string name="danhsachmathang">Danh sách mặt hàng</string>
    <string name="chonngay">Chọn ngày</string>
    <string name="vaodiemhaicham">Vào điểm:</string>
    <string name="radiemhaicham">Ra điểm:</string>
    <string name="vieccanlamhaicham">Việc cần làm:</string>
    <string name="vieccanlam">Việc cần làm:</string>
    <string name="chonkhachhang">Chọn khách hàng</string>
    <string name="daluu">Đã lưu</string>
    <string name="nhapnoidung">Nhập nội dung</string>
    <string name="batdauhaicham">Bắt đầu:</string>
    <string name="ketthuchaicham">Kết thúc:</string>
    <string name="thongtintuyen">Thông tin tuyến</string>
    <string name="tuyenhaicham">Tuyến:</string>
    <string name="tinh">Tỉnh:</string>
    <string name="tienhanghaicham">Tiền hàng:</string>
    <string name="tienduochuonghaicham">Tiền được hưởng:</string>
    <string name="nhanviechaicham">Nhận việc:</string>
    <string name="trangthaihaicham">Trạng thái:</string>
    <string name="diachivaodiemhaicham">Địa chỉ vào điểm:</string>
    <string name="diachiradiemhaicham">Địa chỉ ra điểm:</string>
    <string name="hinhanhhaicham">Hình ảnh:</string>
    <string name="nhanviec">Nhận việc</string>
    <string name="trangchu">Trang chủ</string>
    <string name="tinnhan">Tin nhắn</string>
    <string name="lichhen">Lịch hẹn</string>
    <string name="vaodiem">Vào điểm</string>
    <string name="danhsachalbum">Danh sách album</string>
    <string name="danhsachdonhang">Danh sách đơn hàng</string>
    <string name="danhsachxulydonhang">Danh sách xử lý đơn hàng</string>
    <string name="danhsachphanhoi">Danh sách phản hồi</string>
    <string name="congno">Công nợ</string>
    <string name="danhsachkhuyenmai">Danh sách khuyến mại</string>
    <string name="danhsachkhachang">Danh sách khách hàng</string>
    <string name="guiban">Gửi bán</string>
    <string name="kehoachkhachhang">Kế hoạch khách hàng</string>
    <string name="kehoachtuyen">Kế hoạch tuyến</string>
    <string name="kehoachkhuvuc">Kế hoạch khu vực</string>
    <string name="congviec">Công việc</string>
    <string name="phienlamviec">Phiên làm việc</string>
    <string name="baocaolichsudichuyen">Báo cáo lịch sử di chuyển</string>
    <string name="vaoradiem">Vào/Ra điểm</string>
    <string name="chupvaguianh">Chụp và gửi ảnh</string>
    <string name="kehoach">Kế hoạch</string>
    <string name="baocao">Báo cáo</string>
    <string name="caidat">Cài đặt</string>
    <string name="dangsuat">Đăng suất</string>
    <string name="trolai">Trở lại</string>
    <string name="taodonhang">Tạo đơn hàng</string>
    <string name="xulydonhang">Xử lý đơn hàng</string>
    <string name="quanlyguiban">Quản lý gửi bán</string>
    <string name="phanhoi">Phản hồi</string>
    <string name="giaoviec">Giao việc</string>
    <string name="phienlamiec">Phiên làm việc</string>
    <string name="lichsudichuyen">Lịch sử di chuyển</string>
    <string name="lichsuvaoradiem">Lịch sử vào ra điểm</string>
    <string name="baocaokpi">Báo cáo KPI</string>
    <string name="baocaokpidonhang">Báo cáo KPI đơn hàng</string>
    <string name="baocaodoanhthu">Báo cáo doanh thu</string>
    <string name="baocaogiaohang">Báo cáo giao hàng</string>
    <string name="baocaothanhtoan">Báo cáo thanh toán</string>
    <string name="baocaomathang">Báo cáo mặt hàng</string>
    <string name="muctieuhaicham">Mục tiêu:</string>
    <string name="thuctehaicham">Thực tế:</string>
    <string name="phantramhaicham">Phần trăm:</string>
    <string name="soluongcobanhaicham">Số lượng cơ bản:</string>
    <string name="soluongthuctehaicham">Số lượng thực tế:</string>
    <string name="nguoilienhe">Người liên hệ</string>
    <string name="masothue">Mã số thuế</string>
    <string name="masothuehaicham">Mã số thuế</string>
    <string name="diachixuathoadonhaicham">Địa chỉ xuất hóa đơn:</string>
    <string name="diachixuathoadon">Địa chỉ xuất hóa đơn</string>
    <string name="taikhoannganhanghaicham">Tài khoản ngân hàng:</string>
    <string name="taikhoannganhang">Tài khoản ngân hàng</string>
    <string name="email">Email</string>
    <string name="websitehaicham">Website:</string>
    <string name="website">Website</string>
    <string name="soantinnhan">Soạn tin nhắn</string>
    <string name="nhomhaicham">Nhóm:</string>
    <string name="quanlyhaicham">Quản lý:</string>
    <string name="chudehaicham">Chủ đề:</string>
    <string name="chude">Chủ đề</string>
    <string name="tongtienhaicham">Tổng tiền:</string>
    <string name="thanhtoanhaicham">Thanh toán:</string>
    <string name="baocaoguiban">Báo cáo gửi bán</string>
    <string name="khuvuc">Khu vực</string>
    <string name="madonhanghaicham">Mã đơn hàng:</string>
    <string name="ngaylapdonhanghaicham">Ngày lập đơn hàng:</string>
    <string name="solangiaohanghaicham">Số lần giao hàng;</string>
    <string name="solanthanhtoanhaicham">Số lần thanh toán:</string>
    <string name="cauhinh">Cấu hình</string>
    <string name="doimatkhau">Đổi mật khẩu</string>
    <string name="lienhe">Liên hệ</string>
    <string name="huongdansudung">Hướng dẫn sử dụng</string>
    <string name="matkhaucu">Mật khẩu cũ</string>
    <string name="matkhaumoi">Mật khẩu mới</string>
    <string name="nhaclaimatkhaumoi">Nhắc lại mật khẩu mới</string>
    <string name="vaodiemkhongcanhoi">Vào điểm không cần hỏi</string>
    <string name="thongbaogiovaodiem">Thông báo giờ vào điểm</string>
    <string name="thongbaotruocgiovaodiem">Thông báo trước giờ vào điểm</string>
    <string name="ngonngu">Ngôn ngữ</string>
    <string name="thongtinlienhe">Thông tin liên hệ</string>
    <string name="hotlinehaicham">Hot line:</string>
    <string name="dienthoaihaicham">Điện thoại:</string>
    <string name="dialog_waiting">Đang tải dữ liệu, vui lòng chờ giây lát...</string>
    <string name="toast_message_not_network_server">Thao tác không hoàn thành vì kết nối đến máy chủ quá yếu, hoặc đang bị ngắt. Thử kiểm tra kết nối và thực hiện lại</string>
    <string name="toast_msg_setup_service_google">Dịch vụ Google đã được cài đặt.</string>
    <string name="dialog_thongbao">Thông báo</string>
    <string name="dialog_title_close">Đóng</string>
    <string name="verName">2.0.1.9</string>
    <string name="toast_msg_no_support_ksmart">Thiết bị không hỗ trợ phần mềm.</string>
    <string name="version">Phiên bản: </string>
    <string name="toast_message_not_network">Không có kết nối mạng</string>
    <string name="toast_message_input_info">Vui lòng nhập đầy đủ thông tin.</string>
    <string name="toast_message_not_balance_network">Kết nối mạng không ổn định</string>
    <string name="kehoachtn">Kế hoạch trong ngày</string>
    <string name="thoat">Thoát</string>
    <string name="title_note_kehoach">Chú ý:</string>
    <string name="title_expected_kehoach">Dự kiến:</string>
    <string name="title_real_kehoach">Thực tế:</string>
    <string name="lichhentrongngay">Lịch hẹn trong ngày</string>
    <string name="huy">Hủy</string>
</resources>