<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big"
        android:background="@drawable/backgoundtablayout"
        android:orientation="vertical"
        android:padding="@dimen/margin_normal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_cancel_red_24dp"
            android:text="@string/mathang"
            android:textColor="@color/colorTextBlack"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGray" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/hinhthuchaicham"
                android:textColor="@color/colorTextBlack" />

            <RadioGroup
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/buon"
                    android:checked="true"

                    />

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/le"
                    android:layout_height="wrap_content"
                    />

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/khac"
                    android:layout_height="wrap_content"
                    />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dongiahaicham"
                android:textColor="@color/colorTextBlack" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="250,500 VNĐ" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/khuyenmaihaicham"
                android:textColor="@color/colorTextBlack" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="250,500 VNĐ" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/soluonghaicham"
                android:textColor="@color/colorTextBlack" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="1 Thùng" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
